@@ -24,6 +24,7 @@ Engine fixes:
 * Fix buttons and checkboxes not handling clicks while the "Accept" key is pressed.
 * Fix incorrect descriptions of controls on mobile devices.
 * Add renderer support for batching calls to local pixel drawing. This speeds up the pre-render of the minimap.
+* Widgets that use custom images can now fall back to the default image if the custom image is missing (instead of exiting in failure).
 
 Game changes:
 
